# warmteverliesberekening

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  TODO.md  deploy.sh  docker-compose.yml  online.txt
.github/workflows/: auto-assign-issues.yml  deploy.yml
crates/isso51-api/: Cargo.toml
crates/isso51-api/src/: config.rs  error.rs  main.rs  state.rs
crates/isso51-api/src/handlers/: calculation.rs  ifc_import.rs  ifcx.rs  mod.rs  projects.rs  report.rs  thermal_import.rs
crates/isso51-core/: Cargo.toml
crates/isso51-core/examples/: gen_fixture.rs  gen_schemas.rs
crates/isso51-core/src/: error.rs  formulas.rs  lib.rs  result.rs
crates/isso51-core/src/calc/: heating_up.rs  infiltration.rs  mod.rs  quadratic_sum.rs  room_load.rs  system_losses.rs  transmission.rs  ventilation.rs
crates/isso51-core/src/import/: mod.rs  sfb.rs  thermal.rs
crates/isso51-core/src/model/: building.rs  climate.rs  construction.rs  enums.rs  mod.rs  room.rs  ventilation.rs
crates/isso51-core/src/tables/: heating_up.rs  infiltration.rs  mod.rs  temperature.rs  thermal_bridge.rs  ventilation.rs
crates/isso51-core/src/validate/: mod.rs
crates/isso51-ifcx/: Cargo.toml
crates/isso51-ifcx/src/: document.rs  from_ifcx.rs  lib.rs  namespace.rs  to_ifcx.rs
docs/: ifc-herontwerp-verslag.md
frontend/: .env.development  .env.production  TODO.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: StatusBar.tsx  TitleBar.css  TitleBar.tsx
frontend/src/hooks/: useAllConstructions.ts  useAutoSave.ts
frontend/src/i18n/: config.ts
mockups/: index.html
mockups/css/: base.css  components.css  layout.css  tokens.css
mockups/pages/: construction-library.html  dashboard.html  import.html  login.html  project-setup.html  report.html  results.html  room-editor-cards.html  room-editor-table.html  room-editor-tree.html  ventilation.html
schemas/v1/: project.schema.json  result.schema.json  thermal-import.schema.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs
tests/fixtures/: dr_engineering_woningbouw.json  dr_engineering_woningbouw_result.json  portiekwoning.json  portiekwoning_result.json  thermal-import-sample.json
tests/references/: README.md  dr-engineering-samenvatting.md  erratum-isso51-2023-samenvatting.md  vabi-woonhuis-janssen-samenvatting.md
tools/ifc-tool/: build.py  pyproject.toml
tools/ifc-tool/ifc_tool/: __init__.py  __main__.py  cli.py  constants.py  models.py
tools/ifc-tool/ifc_tool/import_ifc/: __init__.py  function_mapper.py  gap_closer.py  geometry.py  importer.py  opening_extractor.py  shared_edge_detector.py  space_extractor.py  storey_resolver.py  unit_detector.py  wall_type_extractor.py
tools/ifc-tool/tests/: conftest.py  test_function_mapper.py  test_gap_closer.py  test_geometry.py  test_models.py  test_shared_edge_detector.py  test_storey_resolver.py
(+108 files in other folders)
