[package]
name = "isso51-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ISSO 51 warmteverliesberekening desktop app"

[lib]
name = "isso51_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
isso51-core = { path = "../crates/isso51-core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
