[project]
name = "ifc-tool"
version = "0.1.0"
description = "IFC import/export sidecar for ISSO 51 warmteverliesberekening"
requires-python = ">=3.10"
dependencies = [
    "ifcopenshell>=0.8.0",
    "pydantic>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pyinstaller>=6.0",
]

[project.scripts]
ifc-tool = "ifc_tool.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
